syntax = "proto3";

package persistenceSDK.schema.types.base;

import "gogoproto/gogo.proto";
import "persistenceSDK/schema/types/base/metaProperty.proto";

option go_package = "github.com/persistenceOne/persistenceSDK/schema/types/base";

message MetaProperties {
  repeated persistenceSDK.schema.types.base.MetaProperty metaPropertyList = 1 [(gogoproto.nullable) = false];
}
