syntax = "proto3";
package parameters;

import "gogoproto/gogo.proto";
import "schema/properties/base/metaProperty.proto";

message Parameter {
  option (gogoproto.goproto_getters) = false;
  properties.MetaProperty meta_property = 1;
}